--- a/src/reset.css
+++ b/src/reset.css
@@ -24,7 +24,10 @@ ul[role="list"],
 ol[role="list"] {
     list-style: none;
 }
-
+ul {
+    padding: 0;
+    margin: 0;
+}
 /* Set core root defaults */
 html:focus-within {
     scroll-behavior: smooth;
